# Sexta-Feira

./: main.py  pyproject.toml
